<resources>
    <string name="app_name">QUIZZES</string>
    <string name="pregunta">QUESTION</string>
    <string name="respuesta">ANSWER</string>
    <string name="numero">0/3</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="acierto">Success</string>
    <string name="continuar">Continue</string>
    <string name="pregunta1">What pokemon has no weaknesses?</string>
    <string name="respuestaA1">Gastrodon</string>
    <string name="respuestaB1">Elekid</string>
    <string name="respuestaC1">Eelektross</string>
    <string name="respuestaD1">Mimikyu</string>
    <string name="correcto">CORRECT</string>
    <string name="incorrecto">INCORRECT</string>
    <string name="felicidades">CONGRATULATIONS!</string>
    <string name="yaTerminasteTodasLasPreguntas">You finished the questions</string>
    <string name="repetir">Retry</string>
    <string name="pregunta2">Which is not a Magic The Gathering card game format?</string>
    <string name="respuestaA2">Commander</string>
    <string name="respuestaB2">Digital</string>
    <string name="respuestaC2">Standard</string>
    <string name="respuestaD2">Booster Draft</string>
    <string name="pregunta3">In the board game Catan, what number is impossible to use in the game?</string>
    <string name="respuestaA3">6</string>
    <string name="respuestaB3">7</string>
    <string name="respuestaC3">2</string>
    <string name="respuestaD3">1</string>
    <string name="toast">Select an answer</string>
</resources>