<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


    </data>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/numero_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="155dp"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/numero"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/pregunta_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/numero_txt"
            android:layout_marginTop="25dp"
            android:background="@color/blackAA"
            android:gravity="center"
            android:text="@string/pregunta"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pregunta_txt"
            android:layout_marginTop="50dp"
            android:background="@color/blue"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:text="@string/a" />

            <RadioButton
                android:id="@+id/radio_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:text="@string/b" />

            <RadioButton
                android:id="@+id/radio_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:text="@string/c" />

            <RadioButton
                android:id="@+id/radio_D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:text="@string/d" />
        </RadioGroup>

        <Button
            android:id="@+id/responder_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:text="@string/respuesta" />
    </RelativeLayout>

</layout>