<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


    </data>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">



        <TextView
            android:id="@+id/pregunta_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/blackAA"
            android:gravity="center"
            android:text="@string/pregunta"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/acierto_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pregunta_txt"
            android:layout_marginTop="70dp"
            android:background="@color/whiteAA"
            android:gravity="center"
            android:text="@string/acierto"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <Button
            android:id="@+id/continuar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:text="@string/continuar" />

    </RelativeLayout>



</layout>